# IRCTC_DYNAMIC_TRAIN_ROUTING

./: .gitignore  Dockerfile  README.md  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py  models.py
